--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "autoprefixer": "^10.4.16",
-    "browser-sync": "^2.29.3",
+    "browser-sync": "^3.0.2",
     "cssnano": "^6.0.1",
     "dart-sass": "^1.25.0",
-    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0",
     "gulp-terser": "^2.1.0",
     "postcss": "^8.4.31",
     "sass": "^1.69.5"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
