--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-gh-pages": "^0.5.4"
   }
 }
